--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Run
         run: |
           cd ./CataHornSolver
-          dotnet run --project CataHornSolver.fsproj ./Tests/Source/racer.horn.smt2
+          dotnet run --project CataHornSolver.fsproj ./Tests/Source/racer.horn.smt2 -- >> output.txt
       #          for v in ./Tests/Source/TIP-no-NAT/*.smt2
 #          do timeout 60s sh -c "echo $v; dotnet run --project CataHornSolver.fsproj $v -- >> output.txt" || true
 #          done;
