--- a/CataHornSolver/CataHornSolver.fsproj
+++ b/CataHornSolver/CataHornSolver.fsproj
@@ -25,6 +25,7 @@
         <Compile Include="z3Process.fs" />
         <Compile Include="Redlog.fs" />
         <Compile Include="Tree.fs" />
+        <Compile Include="Scheme.fs" />
         <Compile Include="Solver.fs" />
         <Compile Include="Tests\Test.fs" />
         <Content Include="run-tests.py" />
@@ -378,6 +379,10 @@
         <PackageReference Include="Antlr4.Runtime.Standard" Version="4.10.1" />
         <PackageReference Include="Argu" Version="6.1.1" />
         <PackageReference Include="Fli" Version="1.1.0" />
+        <PackageReference Include="JetBrains.dotTrace.CommandLineTools.linux-x64" Version="2023.3.1">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
         <PackageReference Include="NUnit" Version="3.13.3" />
         <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
