--- a/RedlogParser/RedlogParser.csproj
+++ b/RedlogParser/RedlogParser.csproj
@@ -9,6 +9,10 @@
 
     <ItemGroup>
       <PackageReference Include="Antlr4.Runtime.Standard" Version="4.10.1" />
+      <PackageReference Include="JetBrains.dotTrace.CommandLineTools.linux-x64" Version="2023.3.1">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
     </ItemGroup>
 
 </Project>
